@@ -15,7 +15,7 @@ MSG_MAINWND_WINDOWS_TEXT_POPUP				Popup selected window
 MSG_MAINWND_WINDOWS_TEXT_SINGLECLICK		Use single-click interface
 MSG_MAINWND_WINDOWS_TEXT_SHADOWTEXT			Show icontext with shadow
 
-MSG_MAINWND_BUTTON_APPLY=300				Apply
-MSG_MAINWND_BUTTON_UNDO						Undo
-MSG_MAINWND_BUTTON_DEFAULT					Default
+MSG_MAINWND_BUTTON_APPLY=300				_Apply
+MSG_MAINWND_BUTTON_UNDO						_Undo
+MSG_MAINWND_BUTTON_DEFAULT					_Default
 
