@@ -15,7 +15,7 @@ MSG_MAINWND_WINDOWS_TEXT_POPUP				Aktivt vindue øverst
 MSG_MAINWND_WINDOWS_TEXT_SINGLECLICK		Brug enkelt-klick brugerflade
 MSG_MAINWND_WINDOWS_TEXT_SHADOWTEXT			Vis ikon-tekst med skygger
 
-MSG_MAINWND_BUTTON_APPLY=300				Aktiver
-MSG_MAINWND_BUTTON_UNDO						Gendan
-MSG_MAINWND_BUTTON_DEFAULT					Standard
+MSG_MAINWND_BUTTON_APPLY=300				_Aktiver
+MSG_MAINWND_BUTTON_UNDO						_Gendan
+MSG_MAINWND_BUTTON_DEFAULT					_Standard
 
