@@ -15,7 +15,7 @@ MSG_MAINWND_WINDOWS_TEXT_POPUP				Ανάδυση επιλεγμένου παρα
 MSG_MAINWND_WINDOWS_TEXT_SINGLECLICK		Χρήση διεπαφής μονού-κλικ
 MSG_MAINWND_WINDOWS_TEXT_SHADOWTEXT			Εμφάνιση κειμένου εικονιδίων με σκιά
 
-MSG_MAINWND_BUTTON_APPLY=300				Εφαρμογή
-MSG_MAINWND_BUTTON_UNDO						Αναίρεση
-MSG_MAINWND_BUTTON_DEFAULT					Προεπιλογή
+MSG_MAINWND_BUTTON_APPLY=300				_Εφαρμογή
+MSG_MAINWND_BUTTON_UNDO						_Αναίρεση
+MSG_MAINWND_BUTTON_DEFAULT					_Προεπιλογή
 
