@@ -15,7 +15,7 @@ MSG_MAINWND_WINDOWS_TEXT_POPUP				Fenêtre Popup sélectionnée
 MSG_MAINWND_WINDOWS_TEXT_SINGLECLICK		Utiliser l'interface mono-click
 MSG_MAINWND_WINDOWS_TEXT_SHADOWTEXT			Afficher le texte d'icône avec ombre
 
-MSG_MAINWND_BUTTON_APPLY=300				Appliquer
-MSG_MAINWND_BUTTON_UNDO						Défaire
-MSG_MAINWND_BUTTON_DEFAULT					Défaut
+MSG_MAINWND_BUTTON_APPLY=300				_Appliquer
+MSG_MAINWND_BUTTON_UNDO						Dé_faire
+MSG_MAINWND_BUTTON_DEFAULT					_Défaut
 
