@@ -15,7 +15,7 @@ MSG_MAINWND_WINDOWS_TEXT_POPUP				Iškelti pasirinktą langą
 MSG_MAINWND_WINDOWS_TEXT_SINGLECLICK		Naudoti "vieno spragtelejimo" sąsają
 MSG_MAINWND_WINDOWS_TEXT_SHADOWTEXT			Šešėliuoti piktogramų tekstą
 
-MSG_MAINWND_BUTTON_APPLY=300				Taikyti
-MSG_MAINWND_BUTTON_UNDO						Atstatyti
-MSG_MAINWND_BUTTON_DEFAULT					Numatyta
+MSG_MAINWND_BUTTON_APPLY=300				_Taikyti
+MSG_MAINWND_BUTTON_UNDO						_Atstatyti
+MSG_MAINWND_BUTTON_DEFAULT					_Numatyta
 
