@@ -15,6 +15,6 @@ MSG_MAINWND_WINDOWS_TEXT_POPUP				Breng geselecteerd venster naar voren
 MSG_MAINWND_WINDOWS_TEXT_SINGLECLICK		Gebruik enkelklik
 MSG_MAINWND_WINDOWS_TEXT_SHADOWTEXT			Toon ikoonteksten met schaduw
 
-MSG_MAINWND_BUTTON_APPLY=300				Toepassen
-MSG_MAINWND_BUTTON_UNDO						Herstellen
-MSG_MAINWND_BUTTON_DEFAULT					Standaard
+MSG_MAINWND_BUTTON_APPLY=300				_Toepassen
+MSG_MAINWND_BUTTON_UNDO						_Herstellen
+MSG_MAINWND_BUTTON_DEFAULT					_Standaard
