@@ -15,7 +15,7 @@ MSG_MAINWND_WINDOWS_TEXT_POPUP				Janela selecionada de PopUp
 MSG_MAINWND_WINDOWS_TEXT_SINGLECLICK		Usar interface de um só clique
 MSG_MAINWND_WINDOWS_TEXT_SHADOWTEXT			Mostrar texto dos ícones sombreados
 
-MSG_MAINWND_BUTTON_APPLY=300				Aplicar
-MSG_MAINWND_BUTTON_UNDO						Desfazer
-MSG_MAINWND_BUTTON_DEFAULT					Padrão
+MSG_MAINWND_BUTTON_APPLY=300				_Aplicar
+MSG_MAINWND_BUTTON_UNDO						_Desfazer
+MSG_MAINWND_BUTTON_DEFAULT					_Padrão
 
