@@ -3,6 +3,7 @@
 Improvements and updates to the dock and dock plugins, including patches from Adam Ritchie.
 Changes to navigation in IconViews, patch from chamel
 Patch to StringView from Adam Ritchie
+Patches to some prefs apps from Adam Ritchie
 
 * June 28, 2010, Anthony Morphett *
 
